# net-dl

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sil.org
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/net_dl/: index.doctree
.doctrees/autoapi/net_dl/download/: index.doctree
.github/workflows/: build-sphinx.yml  publish.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/net_dl/: index.rst.txt
_sources/autoapi/net_dl/download/: index.rst.txt
autoapi/: index.html
autoapi/net_dl/: index.html
autoapi/net_dl/download/: index.html
demo/: tkapp.py
scripts/: build-docs.sh
sphinx/source/: conf.py  conf.py.bak
src/net_dl/: __init__.py  download.py  props.py
src/net_get/: __init__.py  __main__.py  config.py  download.py  props.py
test/: __init__.py  test_download.py  test_props.py
