[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "net-dl"
description = "Download web pages and files from the internet using CLI or as a Python module."
readme = "README.md"
authors = [
    {name="Nate Marti", email="nate_marti@sil.org"}
]
requires-python = ">=3.8"
dependencies = [
    "requests",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sil-car/net-dl"
Issues = "https://github.com/sil-car/net-dl/issues"

[project.scripts]
net-dl = "net_dl:main"

[tool.setuptools.dynamic]
version = {attr = "net_dl.__version__"}
